fix: update logo size in navbar for better visibility

--- a/src/App.css
+++ b/src/App.css
@@ -46,10 +46,9 @@ body.dark {
     margin: 20px 0;
 }
 
-.navbar .logo img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+.navbar .logo  {
+    width: 50px;
+    height: 50px;
 }
 
 .navbar .text {
